<resources>
    <string name="app_name">Jaqqa</string>

    <string name="hello_world">Вы выбрали Русский!</string>
    <string name="action_settings">Насройки</string>
    <string name="myList1">Мой список</string>
    <string name="myList2">Стоп лист</string>
    <string name="myCallList">Список звонков</string>
    <string name="add_number">Добавить номер</string>
    <string name="action_kitten">action_kitten</string>
    <string name="newnumber">Добавить новый номер</string>
    <string name="selectnumber">Укажите новый номер:</string>
    <string name="timeblock">Укажите время для блокировки:</string>
    <string name="AlreadyExistedNumber">Этот номер уже существует:</string>
    <string name="addnum">Добавить</string>
    <string name="addNumber">Добавить номер</string>
    <string name="callList">Список звонков</string>
    <string name="delete_all_numbers">Удалить все номера</string>
    <string name="emptyList">Список пуст, добавьте хотябы один</string>
    <string name="stoplist">Стоплист</string>
    <string name="menu">Меню</string>
    <string name="selectFromCallLog">Выбрать из журнала вызовов</string>
    <string name="SelecTime">Выберите время для блокировки</string>
    <string name="SelecedTime">Выбранное время: </string>
    <string name="SelectNumber">Укажите пожалуйста номер телефона!</string>
    <string name="SelectNumberError">Введите пожалуйста корректный номер телефона! (например +12345678900)</string>
    <string name="Saved">Сохранено</string>
    <string name="notSaved">Не сохранен!</string>
    <string name="Save">Сохранить</string>
    <string name="Cancel">Отмена!</string>
    <string name="Delete">Удалить</string>
    <string name="Deleted">Удалено</string>
    <string name="Add">Добавить</string>
    <string name="SelectTime">Выбранное время </string>
    <string name="SelectLanguage">Выберите язык</string>
    <string-array name="Language">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="h24">24 часа</string>
    <string name="days7">7 дней</string>
    <string name="alltime">Навсегда</string>
    <string name="h1">1 час</string>
    <string name="DaysLeft"> дней осталось</string>
    <string name="HoursLeft"> часов осталось</string>
    <string name="MinutesLeft"> минут осталось</string>
    <string name="Forever"> навсегда</string>
    <string name="Language">Изменить язык</string>
    <string name="Feedback">Ваши отзывы/пожелания</string>
    <string name="Contact_us">Контакты</string>
    <string name="Continue">Продолжить</string>





</resources>
