<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectFromCallLog"
        android:textAllCaps="false"
        android:id="@+id/selectFromCallLog"
        android:background="@mipmap/ic_buttonbuy"
        android:textColor="@color/textColorWhite"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="callLogActivity"
        android:layout_marginTop="20dp" />


    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/selectnumber"
        android:textAllCaps="false"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/activity_vertical_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_gravity="center_horizontal"
        android:capitalize="none"
        android:height="30dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:text="@string/timeblock"
        android:id="@+id/textView4"
        android:textSize="@dimen/activity_vertical_margin" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:text="@string/h1"
            android:id="@+id/radioButton0"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
    <RadioButton
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/h24"
        android:id="@+id/radioButton"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/days7"
        android:id="@+id/radioButton2"
        android:layout_weight="0.07"
        android:checked="false"
        android:onClick="onRadioButtonClicked"/>
     <RadioButton
            android:layout_width="211dp"
            android:layout_height="wrap_content"
         android:text="@string/alltime"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnum"
        android:textAllCaps="false"
        android:id="@+id/button3"
        android:background="@mipmap/ic_buttonbuy"
        android:textColor="@color/textColorWhite"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="onClick" />
</LinearLayout>